[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/Pianaforma-Exd9.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Heart.png" type="Texture" id=2]
[ext_resource path="res://Assets/CoinHigherRes.png" type="Texture" id=3]
[ext_resource path="res://Themes/ButtonTheme.tres" type="Theme" id=4]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.227451, 0.305882, 0.356863, 1 )

[sub_resource type="CanvasItemMaterial" id=7]
next_pass = SubResource( 6 )
light_mode = 1

[sub_resource type="DynamicFont" id=8]
size = 75
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
mouse_filter = 1
script = ExtResource( 5 )

[node name="Coins" type="Label" parent="."]
anchor_left = 0.08
anchor_top = 0.015
anchor_right = 0.178
anchor_bottom = 0.085
margin_left = 50.2
margin_top = 0.4
margin_right = -0.679993
margin_bottom = -0.400002
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "000"
valign = 1

[node name="Sprite" type="Sprite" parent="Coins"]
position = Vector2( -31, 43 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Health" type="Label" parent="."]
anchor_left = 0.02
anchor_top = 0.015
anchor_right = 0.082
anchor_bottom = 0.085
margin_left = 57.8
margin_top = 0.4
margin_right = 1.07999
margin_bottom = -0.400002
custom_fonts/font = SubResource( 2 )
text = "20"
valign = 1

[node name="Sprite" type="Sprite" parent="Health"]
position = Vector2( -54, 19 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 2 )
centered = false

[node name="BuildMode" type="Button" parent="."]
anchor_left = 0.919
anchor_top = 0.91
anchor_right = 0.989
anchor_bottom = 0.979
margin_left = -13.6401
margin_top = -0.400024
margin_right = 17.1599
margin_bottom = 0.23999
theme = ExtResource( 4 )
toggle_mode = true
text = "Build Mode"

[node name="PauseButton" type="Button" parent="."]
material = SubResource( 7 )
margin_left = 2422.0
margin_top = 22.0
margin_right = 2535.0
margin_bottom = 96.0
theme = ExtResource( 4 )
toggle_mode = true
text = "Pause"

[node name="BuildOptions" type="OptionButton" parent="."]
anchor_left = 0.792
anchor_top = 0.909
anchor_right = 0.908
anchor_bottom = 0.979
margin_left = -0.520142
margin_top = 0.039917
margin_right = -4.48022
margin_bottom = 2.23999
theme = ExtResource( 4 )
text = "Tower Selection"
align = 1

[node name="Build" type="Button" parent="."]
anchor_left = 0.914
anchor_top = 0.824
anchor_right = 0.994
anchor_bottom = 0.897
margin_left = 1.15991
margin_top = 0.439941
margin_right = -0.640137
margin_bottom = -0.680054
theme = ExtResource( 4 )
text = "Build"

[node name="StartWave" type="Button" parent="."]
anchor_left = 0.841
anchor_top = 0.016
anchor_right = 0.932
anchor_bottom = 0.067
margin_left = 4.04004
margin_top = -0.0400009
margin_right = 1.07983
margin_bottom = 0.519997
theme = ExtResource( 4 )
text = "Next Wave"

[node name="Remove" type="Button" parent="."]
margin_left = 2345.0
margin_top = 1078.0
margin_right = 2545.0
margin_bottom = 1171.0
theme = ExtResource( 4 )
text = "Destroy"

[node name="Upgrade" type="Button" parent="."]
anchor_right = 0.071
anchor_bottom = 0.025
margin_left = 2341.0
margin_top = 962.0
margin_right = 2364.24
margin_bottom = 1025.0
theme = ExtResource( 4 )
text = "Upgrade"

[node name="Errors" type="Label" parent="."]
anchor_left = 0.294
anchor_top = 0.023
anchor_right = 0.676
anchor_bottom = 0.116
margin_left = -0.640015
margin_top = -0.120003
margin_right = -0.560181
margin_bottom = -0.0400085
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="ErrorTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ErrorFade" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="ChangeView" type="Button" parent="."]
margin_left = 37.0
margin_top = 1335.0
margin_right = 306.0
margin_bottom = 1418.0
theme = ExtResource( 4 )
text = "Perspective"

[connection signal="toggled" from="BuildMode" to="." method="_on_Mode_toggled"]
[connection signal="toggled" from="PauseButton" to="." method="_on_PauseButton_toggled"]
[connection signal="item_selected" from="BuildOptions" to="." method="_on_BuildOptions_item_selected"]
[connection signal="pressed" from="Build" to="." method="_on_BuildRemove_pressed"]
[connection signal="pressed" from="StartWave" to="." method="_on_StartWave_pressed"]
[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="timeout" from="ErrorTimer" to="." method="_on_ErrorTimer_timeout"]
[connection signal="timeout" from="ErrorFade" to="." method="_on_ErrorFade_timeout"]
[connection signal="pressed" from="ChangeView" to="." method="_on_ChangeView_pressed"]
